--- a/limits-service.properties
+++ b/limits-service.properties
@@ -1,2 +1,4 @@
-limit-service.maxconfiguration=88
-limit-service.minconfiguration=8
+#These are the ##DEFAULT## properties of Limits Service.
+
+limits-service.maxconfiguration=100
+limits-service.minconfiguration=8
