--- a/limits-service-dev.properties
+++ b/limits-service-dev.properties
@@ -1,5 +1,5 @@
 #These are the properties of Limits Service(DEV).
 
-limit-service.maxconfiguration=100
-limit-service.minconfiguration=1
+limits-service.maxconfiguration=1008
+limits-service.minconfiguration=8
 
