--- a/limits-service-qa.properties
+++ b/limits-service-qa.properties
@@ -1,4 +1,4 @@
 #These are the properties of Limits Service(QA).
 
-limit-service.maxconfiguration=10
-limit-service.minconfiguration=1
+limits-service.maxconfiguration=1002
+limits-service.minconfiguration=8
